--- a/android/src/main/res/layout/overlay_layout.xml
+++ b/android/src/main/res/layout/overlay_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"    android:background="#CC000000"
+    android:background="#CC000000"
     android:gravity="center"
     android:orientation="vertical">
 
